--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="denied">Access denied</string>
+    <string name="granted">Access granted</string>
+    <string name="fail_message">You have a rooted device!</string>
+    <string name="fail_pin">Incorrect PIN!</string>
+    <string name="success_message">You have successfully bypassed root detection!</string>
+    <string name="success_pin">You have successfully bypassed the PIN check!</string>
 </resources>
