--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="fail_pin">Incorrect PIN!</string>
     <string name="success_message">You have successfully bypassed root detection!</string>
     <string name="success_pin">You have successfully bypassed the PIN check!</string>
+    <string name="pin">4863</string>
+    <string name="key">infosecadventues</string>
+    <string name="no_plaintext">Plain text is not provided!</string>
 </resources>
